test/tests/bad/unification-failed.carth
;; UnificationFailed

(data Integ (Integ Int))

(defvar type-mismatch (Integ True))
